Envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 20000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/catalog"
                          route:
                            cluster: catalog_service

                        - match:
                            prefix: "/order"
                          route:
                            cluster: order_service

                        - match:
                            prefix: "/o"
                          route:
                            prefix_rewrite: "/order"
                            cluster: order_service

                        - match:
                            prefix: "/c"
                          route:
                            prefix_rewrite: "/catalog"
                            cluster: catalog_service
                http_filters:
                  - name: envoy.filters.http.router

            # - name: envoy.filters.network.http_connection_manager
            #   typed_config:
            #     "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            #     stat_prefix: ingress_http
            #     route_config:
            #       name: local_route
            #       virtual_hosts:
            #         - name: upstream
            #           domains: ["*"]
            #           routes:
            #             - match:
            #                 prefix: "/t"
            #               route:
            #                 prefix_rewrite: "/tea"
            #                 cluster: catalog_service
            #             - match:
            #                 prefix: "/catalog"
            #               route:
            #                 cluster: catalog_service

            #             - match:
            #                 prefix: "/order"
            #               route:
            #                 cluster: order_service
            #             - match:
            #                 prefix: "/o"
            #               route:
            #                 prefix_rewrite: "/order"
            #                 cluster: order_service

            #             - match:
            #                 prefix: "/catalog"
            #               route:
            #                 cluster: catalog_service
            #             - match:
            #                 prefix: "/c"
            #               route:
            #                 prefix_rewrite: "/catalog"
            #                 cluster: catalog_service
            #     http_filters:
            #         - name: envoy.filters.http.ext_authz
            #           typed_config:
            #             "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
            #             transport_api_version: V3
            #             http_service:
            #               server_uri:
            #                 uri: auth
            #                 cluster: auth_service
            #                 timeout: 0.250s
            #               path_prefix: "/envoy"
            #               authorization_response:
            #                 allowed_upstream_headers:
            #                   patterns:
            #                     - exact: x-current-user
            #         - name: envoy.filters.http.router
    - name: listener_1
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 20001
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/catalog"
                          route:
                            cluster: catalog_service

                        - match:
                            prefix: "/order"
                          route:
                            cluster: order_service

                        - match:
                            prefix: "/o"
                          route:
                            prefix_rewrite: "/order"
                            cluster: order_service

                        - match:
                            prefix: "/c"
                          route:
                            prefix_rewrite: "/catalog"
                            cluster: catalog_service
                http_filters:
                  - name: envoy.filters.http.router

            # - name: envoy.filters.network.http_connection_manager
            #   typed_config:
            #     "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            #     stat_prefix: ingress_http
            #     route_config:
            #       name: local_route
            #       virtual_hosts:
            #         - name: upstream
            #           domains: ["*"]
            #           routes:
            #             - match:
            #                 prefix: "/t"
            #               route:
            #                 prefix_rewrite: "/tea"
            #                 cluster: secure_catalog_service
            #             - match:
            #                 prefix: "/catalog"
            #               route:
            #                 cluster: secure_catalog_service

            #             - match:
            #                 prefix: "/order"
            #               route:
            #                 cluster: secure_order_service
            #             - match:
            #                 prefix: "/o"
            #               route:
            #                 prefix_rewrite: "/order"
            #                 cluster: secure_order_service

            #             - match:
            #                 prefix: "/catalog"
            #               route:
            #                 cluster: secure_catalog_service
            #             - match:
            #                 prefix: "/c"
            #               route:
            #                 prefix_rewrite: "/catalog"
            #                 cluster: secure_catalog_service
            #     http_filters:
            #       - name: envoy.filters.http.ext_authz
            #         typed_config:
            #           "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
            #           transport_api_version: V3
            #           http_service:
            #             server_uri:
            #               uri: auth
            #               cluster: auth_service
            #               timeout: 0.250s
            #             path_prefix: "/envoy"
            #             authorization_response:
            #               allowed_upstream_headers:
            #                 patterns:
            #                   - exact: x-current-user
            #       - name: envoy.filters.http.router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: "/etc/ssl/certs/https.crt"
                    private_key:
                      filename: "/etc/ssl/certs/key.pem"
  clusters:
    - name: tea_service
      connect_timeout: 1s
      type: strict_dns
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: tea_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: teaapi
                      port_value: 80
    - name: secure_tea_service
      connect_timeout: 1s
      type: strict_dns
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: secure_tea_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: teaapi
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: localhost
    - name: order_service
      connect_timeout: 1s
      type: strict_dns
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: order_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: order
                      port_value: 80
              # - endpoint:
              #     address:
              #       socket_address:
              #         address: order
              #         port_value: 80
              # - endpoint:
              #     address:
              #       socket_address:
              #         address: order
              #         port_value: 80

    - name: secure_order_service
      connect_timeout: 1s
      type: strict_dns
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: secure_order_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: order
                      port_value: 443
              # - endpoint:
              #     address:
              #       socket_address:
              #         address: order
              #         port_value: 443
              # - endpoint:
              #     address:
              #       socket_address:
              #         address: order
              #         port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: localhost

    - name: catalog_service
      connect_timeout: 1s
      type: strict_dns
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: catalog_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: catalog
                      port_value: 80

    - name: secure_catalog_service
      connect_timeout: 1s
      type: strict_dns
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: secure_catalog_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: catalog
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: localhost

    # - name: auth_service
    #   type: STRICT_DNS
    #   lb_policy: ROUND_ROBIN
    #   load_assignment:
    #     cluster_name: auth_service
    #     endpoints:
    #       - lb_endpoints:
    #           - endpoint:
    #               address:
    #                 socket_address:
    #                   address: auth
    #                   port_value: 80

    # - name: secure-auth_service
    #   type: STRICT_DNS
    #   lb_policy: ROUND_ROBIN
    #   load_assignment:
    #     cluster_name: secure-auth_service
    #     endpoints:
    #       - lb_endpoints:
    #           - endpoint:
    #               address:
    #                 socket_address:
    #                   address: auth
    #                   port_value: 443
    #   transport_socket:
    #     name: envoy.transport_sockets.tls
    #     typed_config:
    #       "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
